[gd_scene load_steps=4 format=3 uid="uid://bh4yvpvs73nym"]

[ext_resource type="Script" path="res://AlimentoPro.gd" id="1_i81ro"]
[ext_resource type="Texture2D" uid="uid://bwoajv0gc5evw" path="res://assets-sistema/alimento-gluten.png" id="2_d3hle"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2qpsa"]
radius = 39.0512

[node name="AlimentoPro" type="Node2D"]
show_behind_parent = true
top_level = true
position = Vector2(-11, 6)
script = ExtResource("1_i81ro")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(10, -5.5)
scale = Vector2(1.52631, 1.5)
texture = ExtResource("2_d3hle")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(10, -5)
shape = SubResource("CircleShape2D_2qpsa")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
